# wdgs

./: .gitignore  CMakeLists.txt  LICENSE  config.ini  stdafx.h  wdgs.sln  wdgs.vcxproj  wdgs.vcxproj.filters
cmake/modules/: BuildAntTweakBar.cmake  BuildGLFW.cmake
ext/AntTweakBar/: .gitignore
ext/AntTweakBar/src/: AntTweakBar.vcxproj  Makefile
ext/glad/: glad.cpp  glad.h
include/: application.h  body.h  camera.h  config.h  debug.h  environment.h  ini.h  memmng.h  object.h  pch.h  resources.h  simhelpers.h  simrenderer.h  simulation.h  ui.h
include/graphics/: light.h  mesh.h  model.h  program.h  shader.h  texture.h
include/physics/: gravity.h  object.h  simhelpers.h  simulation.h
lib/: AntTweakBar.lib  glfw3.lib
res/: resources.ini
res/environments/: yurits.dds
res/shaders/: bloom.fs.glsl  blur.fs.glsl  environment.fs.glsl  hdr.fs.glsl  hdr.vs.glsl  rocky.fs.glsl  rocky.vs.glsl  rocky_athmo.fs.glsl  star.fs.glsl  star.vs.glsl
res/simulations/: solar.sim
src/: application.cpp  camera.cpp  config.cpp  debug.cpp  gravity.cpp  memmng.cpp  mesh.cpp  resources.cpp  simrenderer.cpp  simulation.cpp  wdgs.cpp
